# ai-textbook-physical-ai-humanoid-robotics

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CONTINUE_WORK.md  DEPLOYMENT.md  README.md  Textbook.html  deploy.sh  deploy_pages.sh  docker-compose.yml  index.html  intro.html  markdown-page.html  nginx.conf  sitemap.xml  start_backend.sh  test_api_connection.html
.specify/memory/: constitution.md
ai-tutor/: index.html
assets/css/: styles.4b4738ea.css  styles.a0de5534.css  styles.f7170b14.css
assets/js/: 01a85c17.8bcca7b0.js  02466473.bc56d9df.js  0c6396c4.a9e4bb59.js  0e384e19.b647229e.js  14dc6d69.7e97fc2d.js  15aff6c0.5e9e23ff.js  1863634e.3388c852.js  1863634e.9b0bbb1a.js  18c41134.a19b27c3.js  1d1ba60b.43a06105.js  1e4232ab.44aa65a0.js  1f391b9e.6eac7738.js  1f391b9e.7dcd225d.js  2237.1b3a8219.js  237.6c578a6f.js  27d12af8.e1048860.js  335.8f881acc.js  393be207.068f0f9f.js  393be207.d06b1bb9.js  416e1622.ff3510cc.js  47a87afe.f35e68ac.js  5094b851.dfab3c22.js  51af8ef4.8809c46a.js  533a09ca.2bc081ff.js  5626dff2.a7c71357.js  59362658.0c0fc720.js  5c868d36.176e87af.js  5d53cb23.60f33d0b.js  5e95c892.4b57a317.js  5e95c892.ca52a12b.js  6115a388.e1ef7a22.js  6d698eba.1f81cbd9.js  73664a40.344442df.js  7661071f.50bea195.js  780.76a65a70.js  7fd0b2ba.85e7e45b.js  814f3328.5aa617f4.js  822bd8ab.9faf2bf0.js  8717b14a.091606ef.js  925b3f96.3a006956.js  (+32 more)
backend/: .env.example  Dockerfile  gunicorn.conf.py  requirements.txt
backend/src/: main.py
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/welcome/: index.html
chapters/: introduction.html  robotics-fundamentals.html
docs/chapter-1-introduction-to-physical-ai/: index.html
docs/chapter-2-robotics-fundamentals/: index.html
docs/chapter-3-humanoid-robotics-design/: index.html
docs/chapter-4-ros-2-and-control-systems/: index.html
docs/chapter-5-simulation-and-gazebo/: index.html
docs/chapter-6-vision-language-action-systems/: index.html
docs/chapter-7-embodied-intelligence-and-cognition/: index.html
docs/chapter-8-advanced-humanoid-control/: index.html
docs/intro/: index.html
markdown-page/: index.html
simulation/ros2_ws/src/tutorials/: CMakeLists.txt  package.xml  setup.py
simulation/ros2_ws/src/tutorials/launch/: pub_sub_launch.py
simulation/ros2_ws/src/tutorials/src/: simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp  simple_subscriber.cpp
simulation/ros2_ws/src/tutorials/tutorials/: simple_action_client.py  simple_action_server.py  simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py
ur/: 404.html  Textbook.html  index.html  intro.html  markdown-page.html  sitemap.xml
(+115 files in other folders)
